# i-hate-papers

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
examples/: summary-2106.09685-d1-gpt-3.5-turbo-16k.md  summary-2106.09685-d1-gpt-3.5-turbo.html  summary-2106.09685-d1-gpt-3.5-turbo.md
i_hate_papers/: arxiv_utils.py  html_utils.py  latex_utils.py  main.py  markdown_utils.py  md_parser.py  openai_utils.py  settings.py
