[tool.poetry]
name = "i-hate-papers"
version = "0.2.1"
description = "Create easily readable versions of academic papers via OpenAI"
authors = ["Adam Charnock <adam@adamcharnock.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "i_hate_papers"}]
homepage = "https://github.com/adamcharnock/i-hate-papers"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing"
]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.10"
arxiv = "^1.4.8"
markdown = "^3.4.4"
python-markdown-math = "^0.8"
html2text = "^2020.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
i_hate_papers = 'i_hate_papers.main:main'
